--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node build.js",
-    "run": "npx prisma db pull && npx prisma studio"
+    "run": "npx prisma db pull && npx prisma studio --port 3000"
   },
   "author": "",
   "description": "",
