--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "",
   "description": "",
   "dependencies": {
+    "concurrently": "^9.2.0",
     "dotenv": "^16.4.5",
+    "http-proxy": "^1.18.1",
     "prisma": "latest"
   }
 }
