--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "",
   "description": "",
+  "scripts": {
+    "start": "node build.js &&  npx prisma db pull && concurrently \"npx prisma studio --port 3000\" \"node secure.js\""
+  },
   "dependencies": {
     "concurrently": "^9.2.0",
     "dotenv": "^16.4.5",
