--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Oscar",
   "description": "Quickly host the database viewer Prisma Studio with only a database url",
   "scripts": {
-    "start": "node build.js && npx prisma db pull && concurrently \"npx prisma studio --port 3000 --browser none\" \"node proxy\""
+    "build": "node build.js && npx prisma db pull",
+    "start": "concurrently \"npx prisma studio --port 3000 --browser none\" \"node proxy\""
   },
   "dependencies": {
     "basic-auth": "^2.0.1",
